lab1/Test/L1-A-12-66.output
Error Type A at Line 3
Error Type A at Line 11
Error Type A at Line 16
Error Type B at Line 31
