lab1/Test/L1-A-12-66.cmm
int BCU1KfaFW4iXc [ 55979313 ] 
;
int :;
struct {
}hrtF7aWHYMOxt5ai ( int qDDVtWP2jPYn , float PK_ ) 
  {
  struct tD wRR8QgsD9dkAc0 ;
  xpQ6TJ || UY < r ( QYMw = uK && IkRzPgWyc == Hf 
    - opENkM / ! - E75vNFpyqi6v7zmE_m [ xeCpKHVCeSd7Iwwa 
    && C4tQlxSo5oSt9F4R <= DipFs + PqwnXFB5bgJeR * ( bah 
    || RGns8KK0 >= G - rTSHb_cm58 ( Pc5Qx %, vVm || NjtfCBX 
    != gncA3_t ) / - - 1420125788.360282530 - 373787853 
    > - CO ( ) . M ) ] ) ;
}
struct {
  int eWViWQS , bvNkc4DqZFDOk6Jp4p = &S_SE5haQf2C6ovJ8uW 
    ;
}saNQU4167haZ 
;
struct Fc4BwO1_TmAnfz1zmRCU {
}slZCm9BBNN5 , AHeR2SvNtSddgBhhiUq 

;
int FV ( ) {
  if ( JVXeQyFgIc0 )   vutWxLOdwyfyXSbqBX ;
else   if ( dS575StN3Mg2n4x1 )   if ( W )   Zxyn19jTzs3ToZUipi 
    ;
else   if ( GIq )   if ( R68pZWXb4 )   while ( GI6rOeOVoXlS7qDq 
    )   hjwI0iWpbsXS ;

else   if ( uUob6tqfk2H0QINCi2   if ( aaf0svs )   return 
    Ys9iB3V1q ;
else {
  }






}
